browser/css/notebookbar.css
/* ... */
#Open_Local_Editor img {
	opacity: .8;
}
[data-theme='dark'] #Open_Local_Editor img {
	filter: invert(1);
}

/* options section */
.notebookbar-options-section .cell.notebookbar {
	padding: 0;
}

/* root container */

.root-container.notebookbar {
	display: table-cell;
	vertical-align: middle;
}

#toolbar-wrapper.hasnotebookbar {
	background: var(--color-background-lighter);
	position: relative;
	z-index: 11;
}

#toolbar-row {
	height: 74px;
}

.vertical.notebookbar {
	width: max-content;
	display: grid;
	grid-auto-flow: row;
	grid-gap: 4px;
}

.horizontal.notebookbar {
	display: grid;
	grid-auto-flow: column;
	grid-gap: 4px;
	align-items: center;
}

/* unobuttons */

/* avoid bug with arrow in new line when window is small */
#table-Home-Section-Insert #table-LineB9 #InsertGraphic.notebookbar,
#table-Home-Section-Insert #table-GroupB20 #InsertTable.notebookbar {
	width: 50px;
}
#table-Home-Section-Insert #table-LineB9 #InsertGraphic.notebookbar{
	width: auto;
	margin-left: -2px;
}
#buttonbefore.notebookbar, #buttonafter.notebookbar, #buttonoptimal.notebookbar, #buttonparallel.notebookbar, #buttonnone.notebookbar, #buttonthrough.notebookbar, #bottom.notebookbar, #top.notebookbar, #standard.notebookbar, #Bold.notebookbar, #Italic.notebookbar, #Underline.notebookbar, #Strikeout.notebookbar{
	margin: 0px !important;
	padding: 0px !important;
}

.unotoolbutton.notebookbar .unobutton {
	cursor: pointer;
	box-sizing: border-box;
	padding: 0;
	width: var(--btn-size);
	height: var(--btn-size);
	background-color: transparent;
	margin: 0;
	vertical-align: middle;
	border: none;
	line-height: 0em;
	color: var(--color-main-text);
	font-size: var(--default-font-size);
	border-radius: var(--border-radius);
}

.jsdialog .ui-tabs-content {
	margin-top: 10px;
}

.ui-tabs-content .unobutton > img {
	width: var(--btn-size);
	height: var(--btn-size);
}

.has-dropdown--color.notebookbar {
	height: var(--btn-size) !important;
}

.unotoolbutton.notebookbar .unolabel {
	font-size: var(--header-font-size);
	font-family: var(--cool-font);
	color: var(--color-main-text);
	padding: 0px 5px !important;
	line-height: normal;
	grid-column: 2;
}

#table-HomeTab .unospan-uptoolbar:not(.disabled) {
	border-top-left-radius: 12px;
	border-bottom-left-radius: 12px;
	background: linear-gradient(to left, #e6e6e600, #e6e6e652 30%);
}
#table-HomeTab .unospan-downtoolbar:not(.disabled) {
	background: linear-gradient(to right, #e6e6e600, #e6e6e652 30%);
	border-top-right-radius: 12px;
	border-bottom-right-radius: 12px;
}
#table-HomeTab .unospan-uptoolbar:not(.disabled):hover{
	box-shadow: -2px 0 2px 2px #e6e6e6b0;
}
#table-HomeTab .unospan-downtoolbar:not(.disabled):hover{
	box-shadow: 2px 0 2px 2px #e6e6e6b0;
}
#table-HomeTab .unospan-uptoolbar img, #table-HomeTab .unospan-downtoolbar img {
	width: 18px !important;
	height: 18px !important;
	padding: 4px;
}

.unotoolbutton.notebookbar.disabled:not(.unospan-shortcutstoolbox),
.unotoolbutton[disabled]:not(.unospan-shortcutstoolbox),
.mobile-wizard-widebutton.disabled,
.locking-disabled {
	opacity: 0.65;
	cursor: not-allowed;
}

.locking-disabled:hover {
	opacity: 1;
}

.restricted-item {
	display: none !important;
}

.unotoolbutton.notebookbar.disabled img,
.mobile-wizard-widebutton.disabled img,
.unotoolbutton[disabled] img {
	-webkit-filter: grayscale(100%) brightness(100%);
	filter: grayscale(100%) brightness(100%);
}

.unotoolbutton.notebookbar {
	margin-inline-end: 5px !important;
	text-align: center;
}

.unotoolbutton.notebookbar.has-label > *:not(.arrowbackground) { /*so they stay side by side*/
	display: table-cell;
	width: 100%;
	height: 100%;
}

.unotoolbutton.notebookbar.has-label {
	text-align: center;
}

.unotoolbutton.notebookbar.has-label:not(.inline) img {
	width: 24px !important;
	margin: auto !important;
	display: block;
}
.has-label.has-dropdown:not(.inline) .unolabel{
	display: inline-block;
	clear: both;
}

/* adding focus to tab in notebookbar */
.ui-tab.selected.notebookbar.add-focus-to-tab {
	border: 2px solid black !important
}

/* unobuttons with inline labels */

.inline.notebookbar {
	width: max-content;
	white-space: nowrap;
	display: grid;
	grid-auto-flow: column;
	align-items: center;
}

#FormatPaintbrush span
{
	display: none;
}

/* Writer */

/* File Tab */

/* Home tab */
#table-HomeTab {
	margin-left: -16px;/*force alignment: clipboard elements*/
	margin-top: -5px;
}

#clearFormatting.notebookbar div img, #FormatPaintbrush.notebookbar div img {
	width: 24px !important;
	height: 24px !important;
}

#clearFormatting.notebookbar, #FormatPaintbrush.notebookbar{
	height: 24px !important;
}

#fontsize.notebookbar {
	width: 65px !important;
}

#fontnamecombobox.notebookbar {
	width: 195px !important;
	top: -1px;
	padding-right: 0px;
}

#BackgroundColor.notebookbar {
	margin-left: 0px !important;
}

#fontsizecombobox.notebookbar {
	width: 4.6rem;
}

.notebookbar.ui-combobox * {
	line-height: 22px;
}
.ui-combobox-content {
	padding-inline: 5px;
}

/* Styles preview */

#stylesview {
	height: 64px;
	width: 530px;
	overflow: auto;
	padding: 0px;
	border: 1px solid var(--color-border);
	border-radius: var(--border-radius);
	border-collapse: separate; /*To use box-shadow in Internet Explorer 9 or later*/
	scrollbar-width: none;
}

#stylesview::-webkit-scrollbar {
	width: 0;
	height: 0;
}

#stylesview .ui-iconview-entry {
	width: 30%;
	box-sizing: border-box;
	padding-top: 0px;
}

#stylesview .ui-iconview-entry.selected {
	border: 1px solid var(--color-border-darker);
	border-collapse: separate; /*To use box-shadow in Internet Explorer 9 or later*/
	background-color: transparent;
}

#stylesview .ui-iconview-entry:not(.selected) {
	border: 1px solid transparent;
}

#stylesview .ui-iconview-entry:not(.selected):hover {
	border: 1px solid var(--color-border-dark);
	-webkit-box-shadow: 0 0 2px 0 var(--color-background-darker);
	box-shadow: 0 0 2px 0 var(--color-background-darker);
	cursor: pointer;
	background-color: transparent;
}
/* ... */

