Notebookbar: Home: Remove unnecessary CSS and fix fontnamecombobox
- Remove all the rules that are not longer active (better solutions
were implemented)
- Remove also #fontnamecombobox.notebookbar declaration. Not only top
and padding were not applicable but we were setting the width which in
turn was creating a different gap (bigger than the grid gap) and
moving icons out of place

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -346,38 +346,9 @@ button.ui-tab.notebookbar {
 /* File Tab */
 
 /* Home tab */
-#table-HomeTab {
-	margin-left: -16px;/*force alignment: clipboard elements*/
-	margin-top: -5px;
-}
-
-#clearFormatting.notebookbar div img, #FormatPaintbrush.notebookbar div img {
-	width: 24px !important;
-	height: 24px !important;
-}
-
-#clearFormatting.notebookbar, #FormatPaintbrush.notebookbar{
-	height: 24px !important;
-}
-
-#fontsize.notebookbar {
-	width: 65px !important;
-}
-
-#fontnamecombobox.notebookbar {
-	width: 195px !important;
-	top: -1px;
-	padding-right: 0px;
-}
-
-#BackgroundColor.notebookbar {
-	margin-left: 0px !important;
-}
-
 #fontsizecombobox.notebookbar {
 	width: 4.6rem;
 }
-
 .notebookbar.ui-combobox * {
 	line-height: 22px;
 }
